my-test/testsuite_scan/ir/SingleSource/UnitTests/Vector/LASX/lasx-xvflogb_s.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvflogb_s.c:7:3: error: use of undeclared identifier '__m256i'
    7 |   __m256i __m256i_out, __m256i_result;
      |   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvflogb_s.c:8:3: error: use of undeclared identifier '__m256'
    8 |   __m256 __m256_out, __m256_result;
      |   ^~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvflogb_s.c:9:3: error: use of undeclared identifier '__m256d'
    9 |   __m256d __m256d_out, __m256d_result;
      |   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvflogb_s.c:10:3: error: use of undeclared identifier 'v4u64'
   10 |   v4u64 v4u64_op0, v4u64_op1, v4u64_op2, v4u64_result;
      |   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvflogb_s.c:11:3: error: use of undeclared identifier 'v8i32'
   11 |   v8i32 v8i32_op0, v8i32_op1, v8i32_op2, v8i32_result;
      |   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvflogb_s.c:19:3: error: use of undeclared identifier 'v8i32_op0'
   19 |   v8i32_op0 = (v8i32){0xffffffff, 0xffffffff, 0xffffffff, 0xffffffff,
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvflogb_s.c:19:16: error: use of undeclared identifier 'v8i32'
   19 |   v8i32_op0 = (v8i32){0xffffffff, 0xffffffff, 0xffffffff, 0xffffffff,
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvflogb_s.c:21:3: error: use of undeclared identifier 'v8i32_result'
   21 |   v8i32_result = (v8i32){0xffffffff, 0xffffffff, 0xffffffff, 0xffffffff,
      |   ^~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvflogb_s.c:21:19: error: use of undeclared identifier 'v8i32'
   21 |   v8i32_result = (v8i32){0xffffffff, 0xffffffff, 0xffffffff, 0xffffffff,
      |                   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvflogb_s.c:23:3: error: use of undeclared identifier '__m256_out'
   23 |   __m256_out = __lasx_xvflogb_s((__m256)v8i32_op0);
      |   ^~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvflogb_s.c:23:16: error: call to undeclared function '__lasx_xvflogb_s'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   23 |   __m256_out = __lasx_xvflogb_s((__m256)v8i32_op0);
      |                ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvflogb_s.c:23:34: error: use of undeclared identifier '__m256'
   23 |   __m256_out = __lasx_xvflogb_s((__m256)v8i32_op0);
      |                                  ^~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvflogb_s.c:24:19: error: use of undeclared identifier 'v8i32_result'
   24 |   check_lasx_out(&v8i32_result, &__m256_out, sizeof(__m256_out), __FILE__, __LINE__);
      |                   ^~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvflogb_s.c:24:34: error: use of undeclared identifier '__m256_out'
   24 |   check_lasx_out(&v8i32_result, &__m256_out, sizeof(__m256_out), __FILE__, __LINE__);
      |                                  ^~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvflogb_s.c:24:53: error: use of undeclared identifier '__m256_out'
   24 |   check_lasx_out(&v8i32_result, &__m256_out, sizeof(__m256_out), __FILE__, __LINE__);
      |                                                     ^~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvflogb_s.c:26:3: error: use of undeclared identifier 'v8i32_op0'
   26 |   v8i32_op0 = (v8i32){0x11111113, 0x11111111, 0x10101093, 0x10101010,
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvflogb_s.c:26:16: error: use of undeclared identifier 'v8i32'
   26 |   v8i32_op0 = (v8i32){0x11111113, 0x11111111, 0x10101093, 0x10101010,
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvflogb_s.c:28:3: error: use of undeclared identifier 'v8i32_result'
   28 |   v8i32_result = (v8i32){0xc2ba0000, 0xc2ba0000, 0xc2be0000, 0xc2be0000,
      |   ^~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvflogb_s.c:28:19: error: use of undeclared identifier 'v8i32'
   28 |   v8i32_result = (v8i32){0xc2ba0000, 0xc2ba0000, 0xc2be0000, 0xc2be0000,
      |                   ^~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
